@@ -1,3 +1,9 @@
+Controller ORCJAVA-282
+======================
+
+ - SCENE and LEARN_SCENE commands were mixed up. Enable scene number
+   to be used with level sensors (Marcus Redeker)
+
 
 Controller 2.1.0 (2012-XX-XX Twin Galaxies)
 ===========================================
